Night background image added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="time">
             <span class="h"></span>:<span class="m"></span>:<span class="s"></span> <span class="gm"></span>
         </h1>
-        <h2 class="greeting-header"><span class="greeting-mode"></span> <span class="name">Joshua Oyewole</span></h2> 
+        <h2 class="greeting-header"><span class="greeting-mode"></span> <span ><input type="text" name="name" id="name" value="Whats your name?" class="name"> </span></h2> 
         
         <p class="plans">What are your plans for Today?</p>
         <div class="todo-container">
