--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
         <h1 class="time">
             <span class="h"></span>:<span class="m"></span>:<span class="s"></span> <span class="gm"></span>
         </h1>
-        <h2 class="greeting-header"><span class="greeting-mode"></span> <span ><input type="text" name="name" id="name" value="Whats your name?" class="name"> </span></h2> 
+        <h2 class="greeting-header"><span class="greeting-mode"></span> <span ><input type="text" name="name" id="name" placeholder="What is your name?" class="name"> </span></h2> 
         
-        <p class="plans">What are your plans for Today?</p>
+        <p class="plans">What are your plans for Today? <button type="button" class="add-btn">Add</button> </p>
         <div class="todo-container">
             <h3>TODO</h3>
             <ol>
                 <li>Make a site</li>
                 <li>Cut my hair</li>
-            </ol>
+            </ol> 
         </div>
     </div>
 
     <script src="app.js"></script>
 </body>
 </html>
+<!-- 
+<input type="text" name="" id=""> -->
