Add Todo functiionality added

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <h2 class="greeting-header"><span class="greeting-mode"></span> <span ><input type="text" name="name" id="name" placeholder="What is your name?" class="name"> </span></h2> 
         
         <p class="plans">What are your plans for Today? <button type="button" class="add-btn">Add</button> </p>
+        <div class="add-todo"></div>
+        
         <div class="todo-container">
             <h3>TODO</h3>
             <ol>
-                <li>Make a site</li>
-                <li>Cut my hair</li>
-            </ol> 
+             </ol>  
         </div>
     </div>
 
