todo added to localStorage

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         </h1>
         <h2 class="greeting-header"><span class="greeting-mode"></span> <span ><input type="text" name="name" id="name" placeholder="What is your name?" class="name"> </span></h2> 
         
-        <p class="plans">What are your plans for Today? <button type="button" class="add-btn">Add</button> </p>
+        <p class="plans">What are your Goals for Today? <button type="button" class="add-btn">Add</button> </p>
         <div class="add-todo"></div>
         
         <div class="todo-container">
-            <h3>TODO</h3>
+            <h3>Goals</h3>
             <ol>
              </ol>  
         </div>
